Implement spring security with JWT tokens